Fixed responsive aspect of html pages when looking on smaller screen sizes

--- a/refinery/static/core/boot_style.css
+++ b/refinery/static/core/boot_style.css
@@ -22,7 +22,7 @@
 */
 
 body {
-	padding-top: 50px; 
+	/* padding-top: 50px; */
 	/*
 	background-image: url(../js/bootstrap/img/grid-18px-masked.png);
   	background-repeat: repeat-x repeat-y;
